infrastructure-application/infrastructure-application.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echoenv-infra
    app.kubernetes.io/component: echoenv-infra
    app.kubernetes.io/instance: echoenv-infra
  name: echoenv-infra
  namespace: infrastructure-application
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: echoenv-infra
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: echoenv-infra
    spec:
      containers:
      - image: quay.io/simonkrenger/echoenv:latest
        imagePullPolicy: IfNotPresent
        name: echoenv-infra
        ports:
        - containerPort: 8080
          protocol: HTTP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoenv-infra
    app.kubernetes.io/component: echoenv-infra
    app.kubernetes.io/instance: echoenv-infra
  name: echoenv-infra
  namespace: infrastructure-application
spec:
  ports:
  - name: 8080-http
    protocol: HTTP
    port: 8080
  selector:
    deployment: echoenv-infra
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: echoenv-infra
    app.kubernetes.io/component: echoenv-infra
    app.kubernetes.io/instance: echoenv-infra
  name: echoenv-infra
  namespace: infrastructure-application
spec:
  port:
    targetPort: 8080-http
  to:
    kind: Service
    name: echoenv-infra
    weight: 100
  wildcardPolicy: None
